+ Added overflow-x hidden to remove the horizontal scroll bar + Fixed spacing related to NavBar2     - Added more height     - Added transition elements to the navbar buttons     - Edited the bottom line on navbar which still needs fixing. + Centered contacts divs

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     width: 100vw;
     padding: 0;
     margin: 0;
-    overflow: auto;
+    overflow-x: hidden;
 }
 
 html {
